[package]
name = "miniflux-ai"
version = "0.2.0"
edition = "2021"
authors = ["zhu327", "thallada"]

[package.metadata.release]
release = false

# https://github.com/rustwasm/wasm-pack/issues/1247
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[profile.release]
lto = true
strip = true
codegen-units = 1

[lib]
crate-type = ["cdylib"]

[dependencies]
base64 = "0.22"
worker = { version = "0.3.4" }
worker-macros = { version = "0.3.4" }
console_error_panic_hook = { version = "0.1.7" }
hex = "0.4"
hmac = "0.12"
reqwest = { version = "0.12", features = ["json"] }
sha2 = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3"
markdown = "1.0.0-alpha.20"
